Runs a data "mining" simulation on the server where results are stored in a csv files such that results can be analyzed from the client side. Various fixes and code updates
